St 1079 (#657)
* Adding Actions class

* Create Draft order test

* Resolve conflicts

* Send an existing draft order

* Resolve conflicts

* Add ManageOrderDueDateTests

* fix checkstyle issue

---------

Co-authored-by: Vijay-knr <Vijay.kayyam@hmcts.net>
Co-authored-by: ElifDenizEsea <61947470+ElifDenizEsea@users.noreply.github.com>